# lu-decomposiiton

./: lu-decomposition.cabal
examples/: example3x3.txt
src/: Generate.hs  LU.hs  Matrix.hs  Modify.hs  Multiply.hs  Solve.hs
test/: Main.hs
